syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

message DeleteNamespaceRequest {
	optional string name = 1;
}

message DeleteNamespaceResponse {
	optional string name = 1;
}