syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

import "google/protobuf/timestamp.proto";

message GetNamespacesRequest {
	optional int32 offset = 1;
	optional int32 limit = 2;
}

message GetNamespacesResponse {
	message Namespace {
		optional string name = 1;
		optional google.protobuf.Timestamp createdAt = 2;
	}
	repeated Namespace namespaces = 1;
	optional int32 offset = 2;
	optional int32 limit = 3;
}